added scrollable home views

--- a/client/mocks/homepageTemplate.html
+++ b/client/mocks/homepageTemplate.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700"
       rel="stylesheet"
     />
-
+	<link rel="stylesheet" href="./css/style.css">
     <!-- Animation CSS-->
     <style>
       /* ----------------------------------------------
@@ -245,8 +245,8 @@
         class="container pt-12 md:pt-24 px-6 mx-auto flex flex-wrap flex-col md:flex-row items-center"
       >
         <!--Left Col-->
-        <div
-          class="flex flex-col w-full xl:w-2/5 lg:items-center rounded shadow-lg"
+        <main
+          class="flex flex-col h-contain w-2/5 items-center rounded shadow-lg"
         >
           <h1
             class="my-4 text-3xl md:text-5xl text-purple-800 font-bold leading-tight text-center md:text-left slide-in-bottom-h1"
@@ -254,10 +254,10 @@
             Homes for sale:
           </h1>
           <div
-            class="flex flex-col w-full md:justify-center pb-24 lg:pb-0 fade-in overflow-y-scroll"
+            class="max-h-screen overflow-y-scroll snap snap-y snap-mandatory no-scrollbar slide-in-bottom-h1"
           >
-            <div
-              class="max-w-sm rounded justify-center overflow-hidden shadow-lg bounce-top-cards"
+            <section
+              class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
             >
               <div class="px-6 py-4">
                 <div class="font-bold text-xl mb-2 text-center">NAME OF PROPERTY</div>
@@ -277,9 +277,9 @@
                   >Owner:</span
                 >
               </div>
-            </div>
-            <div
-              class="max-w-sm rounded justify-center overflow-hidden shadow-lg bounce-top-cards"
+            </section>
+            <section
+              class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
             >
               <div class="px-6 py-4">
                 <div class="font-bold text-xl mb-2 text-center">NAME OF PROPERTY</div>
@@ -299,9 +299,9 @@
                   >Owner:</span
                 >
               </div>
-            </div>
-            <div
-              class="max-w-sm rounded justify-center overflow-hidden shadow-lg bounce-top-cards"
+            </section>
+            <section
+              class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
             >
               <div class="px-6 py-4">
                 <div class="font-bold text-xl mb-2 text-center">NAME OF PROPERTY</div>
@@ -321,9 +321,76 @@
                   >Owner:</span
                 >
               </div>
-            </div>
+            </section>
+            <section
+              class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
+            >
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2 text-center">NAME OF PROPERTY</div>
+				<img class="w-full" src="https://www.kbhome.com/globalassets/images/community-images/texas/dallas---fort-worth/copper-creek-53163/renderings/kbdfw_coppercreek_1813-exterior_1157w_rev-1200.jpg" alt="Sunset in the mountains">
+              </div>
+              <div class="px-6 pt-4 pb-2 flex flex-col">
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Address:</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Price:</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Owner:</span
+                >
+              </div>
+            </section>
+            <section
+              class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
+            >
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2 text-center">NAME OF PROPERTY</div>
+				<img class="w-full" src="https://www.kbhome.com/globalassets/images/community-images/texas/dallas---fort-worth/copper-creek-53163/renderings/kbdfw_coppercreek_1813-exterior_1157w_rev-1200.jpg" alt="Sunset in the mountains">
+              </div>
+              <div class="px-6 pt-4 pb-2 flex flex-col">
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Address:</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Price:</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Owner:</span
+                >
+              </div>
+            </section>
+            <section
+              class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
+            >
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2 text-center">NAME OF PROPERTY</div>
+				<img class="w-full" src="https://www.kbhome.com/globalassets/images/community-images/texas/dallas---fort-worth/copper-creek-53163/renderings/kbdfw_coppercreek_1813-exterior_1157w_rev-1200.jpg" alt="Sunset in the mountains">
+              </div>
+              <div class="px-6 pt-4 pb-2 flex flex-col">
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Address:</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Price:</span
+                >
+                <span
+                  class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+                  >Owner:</span
+                >
+              </div>
+            </section>
+            <button class="bg-purple-500 hover:bg-purple-400 text-white font-bold py-2 px-4 mb-3 border-b-4 border-purple-700 hover:border-purple-500 rounded">View all</button>
           </div>
-        </div>
+        </main>
 
         <!--Right Col-->
         <div class="w-full xl:w-3/5 py-6 overflow-y-hidden">
