--- a/client/mocks/dashboardTemplate.html
+++ b/client/mocks/dashboardTemplate.html
@@ -62,7 +62,7 @@
       >
         <!--Left Col-->
         <main
-          class="flex flex-col h-contain w-2/5 items-center rounded shadow-lg"
+          class="flex flex-col h-contain w-2/5 items-center rounded shadow-lg bg-purple-50"
         >
           <h1
             class="my-4 text-3xl md:text-5xl text-purple-800 font-bold leading-tight text-center md:text-left slide-in-bottom-h1"
@@ -73,7 +73,7 @@
             class="max-h-screen overflow-y-scroll snap snap-y snap-mandatory no-scrollbar slide-in-bottom-h1"
           >
             <section
-              class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
+              class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4 bg-white"
             >
               <div class="px-6 py-4">
                 <div class="font-bold text-xl mb-2 text-center">
@@ -164,7 +164,7 @@
 
         <!--Right Col-->
         <main
-          class="flex flex-col h-contain w-2/5 items-center rounded shadow-lg bg-white"
+          class="flex flex-col h-contain w-2/5 items-center rounded shadow-lg bg-purple-50"
         >
           <h1
             class="my-4 text-3xl md:text-5xl text-purple-800 font-bold leading-tight text-center md:text-left slide-in-bottom-h1"
@@ -175,7 +175,7 @@
             class="max-h-screen overflow-y-scroll snap snap-y snap-mandatory no-scrollbar slide-in-bottom-h1"
           >
           <section
-          class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
+          class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4 bg-white"
         >
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2 text-center">
@@ -204,7 +204,7 @@
           </div>
         </section>
           <section
-          class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4"
+          class="max-w-sm justify-center overflow-hidden border-2 border-purple-800 bounce-top-cards snap-start my-4 bg-white"
         >
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2 text-center">
