--- a/client/mocks/homepageTemplate.html
+++ b/client/mocks/homepageTemplate.html
@@ -33,7 +33,7 @@
       <div class="w-full container mx-auto p-6">
         <div class="w-full flex items-center justify-between">
           <a
-            class="flex items-center text-indigo-400 no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
+            class="flex items-center text-indigo-400 no-underline hover:no-underline font-bold text-2xl"
             href="#"
           >
             KeyStone Logo
@@ -41,7 +41,7 @@
 
           <div class="flex w-1/2 justify-end content-center">
             <a
-              class="inline-block text-blue-700 no-underline hover:text-indigo-900 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4"
+              class="inline-block text-blue-700 no-underline hover:text-indigo-900 hover:text-underline text-center h-auto p-4"
               href="#"
             >
               Login
